--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "concurrently": "^5.3.0"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.11.12"
   }
 }
