--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "concurrently": "^5.3.0"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.12"
   }
 }
