--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.12"
+    "mongoose": "^5.11.13",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0"
   }
 }
