--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-easy-crop": "^3.3.1",
+    "react-facebook-login": "^4.1.1",
     "react-image-crop": "^8.6.6",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
