--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.9.2",
@@ -26,6 +27,8 @@
     "mongoose": "^5.11.13",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
+    "nodemailer": "^6.4.18",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.0"
