--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "concurrently": "^5.3.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.849.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
@@ -27,6 +28,7 @@
     "mongoose": "^5.11.13",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
+    "multer-s3": "^2.9.0",
     "nodemailer": "^6.4.18",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.4.1",
