--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "redux-persist": "^6.0.0"
   }
 }
