--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=6.0.0"
+    "node": "^12.16.3",
+    "npm": "^6.14.11"
   },
   "scripts": {
     "client-install": "npm install --prefix client",
