--- a/package.json
+++ b/package.json
@@ -10,18 +10,15 @@
   "scripts": {
     "client-install": "npm install --prefix client",
     "start": "node server.js",
-   
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild":
-      "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.3.0",
-    "nodemon":"^1.17.3"
+    "nodemon": "^1.17.3"
   },
   "dependencies": {
     "aws-sdk": "^2.849.0",
