--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.17.3"
+   
+    "nodemon": "^1.19.4"
   },
   "dependencies": {
     "aws-sdk": "^2.849.0",
     "axios": "^0.21.1",
+    "concurrently": "^5.3.0",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "email-validator": "^2.0.4",
