--- a/package.json
+++ b/package.json
@@ -13,19 +13,17 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "npm run client-install && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.3.0",
-   
     "nodemon": "^1.19.4"
   },
   "dependencies": {
     "aws-sdk": "^2.849.0",
     "axios": "^0.21.1",
-    
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "email-validator": "^2.0.4",
