--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "^12.16.3",
-    "npm": "^6.14.11"
+    "node": "8.1.1",
+    "npm": "5.0.3"
   },
   "scripts": {
     "start": "node server.js",
