--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "social-pics",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "engines": {
     "node": "12.16.3",
     "npm": "6.14.11"
